objects/QualificationReadiness__c.object
<CustomObject>
    <description>The state of readiness that a program category qualification is in.</description>
    <fields>
        <fullName>ExternalName__c</fullName>
        <description>The client-friendly term for this state of readiness.</description>
        <inlineHelpText>The client-friendly term for this state of readiness.</inlineHelpText>
        <label>External Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualificationReadinessEID__c</fullName>
        <description>The Enterprise ID for this qualification readiness.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this qualification readiness.</inlineHelpText>
        <label>Qualification Readiness EID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RankOrder__c</fullName>
        <description>The order of importance of this qualification state of readiness.</description>
        <inlineHelpText>The order of importance of this qualification state of readiness.</inlineHelpText>
        <label>Rank Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Readiness</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalName__c</columns>
        <columns>RankOrder__c</columns>
        <columns>QualificationReadinessEID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Readiness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Readinesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>